# PEP-GS-Flight-Software

./: .gitignore  README.md  testfile.txt
.github/workflows/: .check-style.yml  check-style.yml  doxygen.yml  static.yml
Deployments/PEP_GS_Main/: CMakeLists.txt
Deployments/PEP_GS_Main/Components/MagnetorquerReceiver/: CMakeLists.txt  MagnetorquerReceiver.cpp  MagnetorquerReceiver.fpp  MagnetorquerReceiver.hpp
Deployments/PEP_GS_Main/Components/MagnetorquerReceiver/docs/: sdd.md
Deployments/PEP_GS_Main/Components/MagnetorquerSender/: CMakeLists.txt  MagnetorquerSender.cpp  MagnetorquerSender.fpp  MagnetorquerSender.hpp
Deployments/PEP_GS_Main/Components/TempReceiver/: CMakeLists.txt  TempReceiver.cpp  TempReceiver.fpp  TempReceiver.hpp
Deployments/PEP_GS_Main/Components/TempSender/: .TempSender.fpp.swp  TempSender.cpp  TempSender.cpp-template  TempSender.fpp
Deployments/PEP_GS_Main/Components/WheelReceiver/: CMakeLists.txt  WheelReceiver.cpp  WheelReceiver.fpp  WheelReceiver.hpp
Deployments/PEP_GS_Main/Components/WheelSender/: .WheelSender.fpp.swp  CMakeLists.txt  WheelSender.cpp  WheelSender.fpp  WheelSender.hpp
Deployments/PEP_GS_Main/Datatypes/: ADCSTypes.fpp  TempTypes.fpp
Deployments/PEP_GS_Main/Drivers/: CMakeLists.txt  MCP9600.c  MCP9600.h
Deployments/PEP_GS_Main/Ports/: .ADCSPorts.fpp.swp  ADCSPorts.fpp  CMakeLists.txt
Deployments/PEP_GS_Main/Top/: PEP_GS_MainPackets.xml  instances.fpp  topology.fpp
Deployments/PEP_GS_Main/build-fprime-automatic-native/: fpp-depend-input  hashes.txt  locs.fpp  prescan-dep-list  prescan-fpp-list
Deployments/PEP_GS_Main/libs/: .CMakeLists.txt
Deployments/PEP_GS_Main/libs/ADCS/src/test/ut/: CMakeLists.txt  TestMain.cpp
Drivers/: MCP9600.c
PEP-GS-VENV/: pyvenv.cfg
PEP-GS_Deployment/: CMakeLists.txt  Main.cpp  README.md
PEP-GS_Deployment/Top/: CMakeLists.txt  PEP-GS_DeploymentPackets.xml  PEP-GS_DeploymentTopology.cpp  PEP-GS_DeploymentTopology.hpp  PEP-GS_DeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
PEP-GS_Main/: CMakeLists.txt  Main.cpp  README.md
PEP-GS_Main/Top/: CMakeLists.txt  PEP-GS_MainPackets.xml  PEP-GS_MainTopology.cpp  PEP-GS_MainTopology.hpp  PEP-GS_MainTopologyDefs.hpp  instances.fpp  topology.fpp
PEP-GS_Main/build-fprime-automatic-native/: fpp-depend-input  prescan-dep-list  prescan-fpp-list
(+659 files in other folders)
